syntax = "proto3";
option go_package = "github.com/viperadnan-git/gogpm/internal/pb";

message SetCaption {
  string caption = 2;
  string item_key = 3; // mediaKey or dedupKey
}
